tests/algorithms/x/PHP/sorts/patience_sort.error
run: exit status 255

Fatal error: Uncaught Error: patience_sort(): Argument #1 ($collection) could not be passed by reference in /workspace/mochi/tests/algorithms/x/PHP/sorts/patience_sort.php:176
Stack trace:
#0 {main}
  thrown in /workspace/mochi/tests/algorithms/x/PHP/sorts/patience_sort.php on line 176
